# Robotic_CPP

devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/gruppe3/: signal_robot.h  signal_transfer.h
devel/include/robottest/: signal_robot.h  signal_transfer.h
devel/lib/gruppe3/: anti_bump  run_game1  run_game2  run_game2_test  test_odom
devel/lib/pkgconfig/: gruppe3.pc  robottest.pc
devel/lib/python2.7/dist-packages/gruppe3/msg/: _signal_robot.py  _signal_transfer.py
devel/lib/python2.7/dist-packages/robottest/msg/: __init__.py  _signal_robot.py  _signal_transfer.py
devel/lib/robottest/: angelina  state_maschine_group3  testconnect  testgui
devel/share/common-lisp/ros/gruppe3/msg/: _package.lisp  _package_signal_robot.lisp  _package_signal_transfer.lisp  gruppe3-msg.asd  signal_robot.lisp  signal_transfer.lisp
devel/share/common-lisp/ros/robottest/msg/: _package.lisp  _package_signal_robot.lisp  _package_signal_transfer.lisp  robottest-msg.asd  signal_robot.lisp  signal_transfer.lisp
devel/share/gennodejs/ros/gruppe3/msg/: _index.js  signal_robot.js  signal_transfer.js
devel/share/gennodejs/ros/robottest/msg/: _index.js  signal_robot.js  signal_transfer.js
devel/share/gruppe3/cmake/: gruppe3-msg-paths.cmake  gruppe3Config.cmake
devel/share/robottest/cmake/: robottest-msg-paths.cmake  robottestConfig.cmake
devel/share/roseus/ros/gruppe3/: manifest.l
devel/share/roseus/ros/gruppe3/msg/: signal_robot.l  signal_transfer.l
devel/share/roseus/ros/robottest/: manifest.l
devel/share/roseus/ros/robottest/msg/: signal_robot.l  signal_transfer.l
src/gruppe3/: CMakeLists.txt  run_game2_member.cpp  turtlebot_launch
src/gruppe3/include/: PredictPoints.h  cal_coordinate.h  clear_angle.h  clear_area.h  clear_average.h  create_map.h  find_b.h  find_ball.h  find_colinear.h  find_ortho.h  find_orthogonal.h  find_path.h  find_poles.h  find_tangent.h  laser_main.h  lidar_main.h  line_fitting.h  load_data.h  move_para.h  predict2.h  run_game1.h  run_game2.h  sort_lines.h  trans_c_o.h  trans_coordinate.h  trans_o_c.h  trans_x_y.h
src/gruppe3/lib/: .nfs000000000635157400000716  .nfs000000000661735200000b65  .nfs000000000661735400000b98
src/gruppe3/member/: run_game2_member.cpp
src/gruppe3/msg/: signal_robot.msg  signal_transfer.msg
src/gruppe3/src/: Move_Turtle.cpp  PredictPoints.cpp  angelina.cpp  anti_bump.cpp  cal_coordinate.cpp  clear_angle.cpp  clear_area.cpp  clear_average.cpp  create_map.cpp  file_descriptor.cpp  find_b.cpp  find_ball.cpp  find_colinear.cpp  find_ortho.cpp  find_orthogonal.cpp  find_path.cpp  find_poles.cpp  find_tangent.cpp  laser.cpp  laser_main.cpp  lidar_main.cpp  line_fitting.cpp  load_data.cpp  load_lidar.cpp  move_odom.cpp  move_odometry.cpp  move_para.cpp  move_turtle.launch  predict2.cpp  run_game1.cpp  run_game2.cpp  sort_lines.cpp  synthesis.cpp  synthesis2.cpp  test_move.cpp  test_odom.cpp  trans_c_o.cpp  trans_coordinate.cpp  trans_o_c.cpp  trans_x_y.cpp
src/robottest/: CMakeLists.txt
src/robottest/angelina/: CMakeLists.txt  colortask.cpp  mainwindow.cpp  ratiotask.cpp  resultframe.cpp  server.cpp  server.h
src/robottest/example/: CMakeLists.txt  main.cpp  testgui.cpp  testgui.h
src/robottest/hermes/: CMakeLists.txt  referee.cpp  referee.h
src/robottest/include/robottest/: QMap.h  SONG.h  SONG_new.h
src/robottest/msg/: signal_robot.msg
src/robottest/src/: SONG.cpp  state_maschine_group3.cpp  state_maschine_group3_update.cpp  testconnect.cpp
